--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
- !-- Global site tag (gtag.js) - Google Analytics -->
+ <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139849942-3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
